# Crew

rag_crew/: README.md  pyproject.toml
rag_crew/src/rag_crew/: crew.py  main.py
